fix problem with overflow hidden

--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -1,8 +1,28 @@
-// .header {
-// height: ;
-// }
 .header__container {
 	background-color: $color-storm-grey;
+	position: relative;
+}
+
+.header__button-anchor {
+	font-size: 28px;
+	position: absolute;
+	bottom: -27px;
+	right: 50%;
+	margin-right: -32px;
+	z-index: 4;
+	color: #000;
+	width: 64px;
+	height: 64px;
+	background-color: $color-white;
+	border-radius: 50%;
+	box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5);
+	border: none;
+	i {
+		color: $color-accent;
+	}
+}
+
+.header__outer {
 	overflow: hidden;
 	position: relative;
 	min-height: 600px;
